<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F4F4F4"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignup"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="Have an account?"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/haveSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:paddingLeft="5dp"
            android:text="Sign In"
            android:textColor="#2F9EF2"
            android:textSize="14dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textFontWeight="800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuppw" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito"
        android:text="@string/please_fill_in_the_form_to_continue"
        android:textColor="#111B21"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/create_new_account"
        android:textColor="#2F9EF2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signuppw"
        style="@style/editText_style"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#40111B21"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupemail"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/signupemail"
        style="@style/editText_style"
        android:layout_marginTop="124dp"
        android:hint="@string/email_addres"
        android:inputType="textEmailAddress"
        android:textColorHint="#40111B21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/showHideBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/nunito"
        android:text="Show"
        android:textColor="#2F9EF2"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/signuppw"
        app:layout_constraintEnd_toEndOf="@+id/signuppw"
        app:layout_constraintTop_toTopOf="@+id/signuppw" />



</androidx.constraintlayout.widget.ConstraintLayout>