<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgapp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/ilus3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/t2" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_buttom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:text="@string/sudah_siap_menikmati_fitur_dari_sike"
        android:textColor="#000000"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/buat_akun_jika_belum_punya_akun_masuk_jika_sudah_punya_akun"
        android:textColor="#999999"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textFontWeight="800"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/squqre_blue"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textFontWeight="800"
        android:textSize="18dp"
        android:textColor="#0089FF"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.134" />


</androidx.constraintlayout.widget.ConstraintLayout>